# media-tracker

./: DATA_COMPLETENESS.md  README.md  add_urls_directly.py  app.py  app_fixed.py  app_simple.py  bigquery_client.py  check_and_delete_null_ids.py  check_duplicates.py  check_fast_mode_urls.py  check_id.py  check_recent_activity.py  check_records.py  check_unbranded_column.py  check_user_urls.py  cleanup_test_urls.py  debug_queue_insertion.py  delete_duplicates.py  delete_false_entries.py  delete_null_ids.py  delete_specific_urls.py  delete_test_batch.py  fast_add_urls.py  fill_all_cells.py  find_metadata_only.py  fix_flawed_articles.py  force_clear_test.py  get_last_processed.py  identify_false_entries.py  light_scrape_batch.py  mark_test_complete.py  news_monitoring_general.ipynb  portfolio_companies.json  process_large_csv.py  process_queue_background.py  processing_queue.json  pyproject.toml  read_delete_file.py  replit.md  run_bulk_scrape.py  (+18 more)
.streamlit/: config.toml
attached_assets/: Pasted--Premium-https-www-techinasia-com-category-subscriber-e_1767871527046.txt  Pasted--name-id-mode-type-INTEGER-description-Unique-identifie_1766078836987.txt  Pasted--sql-CREATE-OR-REPLACE-PROCEDURE-media-455519-mediatracker-process-new-url-OPTIONS-strict-mode-1756139399930_1756139399930.txt  Pasted-BEGIN-session-DECLARE-run-id-STRING-DEFAULT-GENERATE-UUID-DECLARE-proc-name-STRING-DEFAU-1756131504306_1756131504307.txt  Pasted-BEGIN-session-DECLARE-run-id-STRING-DEFAULT-GENERATE-UUID-DECLARE-proc-name-STRING-DEFAU-1756140001733_1756140001734.txt  csv_preview_1767895452653.csv  (+14 more)
